[build-system]
requires = ["setuptools>61.0", "requests>2.7", "pandas"]
build-backend = "setuptools.build_meta"

[project]
name = "pyobis"
version = "1.0.0"
authors = [
  { name="Scott Chamberlain", email="myrmecocystus@gmail.com" },
]
description = "Python client for OBIS"
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",    
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
"Homepage" = "https://github.com/iobis/pyobis"
"Bug Tracker" = "https://github.com/iobis/pyobis/issues"