[build-system]
requires = ["setuptools>61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyobis"
version = "1.0.0"
authors = [
  { name="Scott Chamberlain", email="myrmecocystus@gmail.com" },
]
description = "Python client for OBIS"
readme = "README.rst"
keywords = [
    "OBIS",
    "ocean data",
    "marine science",
    "GBIF",
]
dependencies = [
    "requests>2.7",
    "pandas",
]
license = { file="LICENSE" }
requires-python = ">=3.7"
urls = {    repository = "https://github.com/iobis/pyobis"  }
classifiers = [
    "Development Status :: 4 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",    
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
"Homepage" = "https://github.com/iobis/pyobis"
"Bug Tracker" = "https://github.com/iobis/pyobis/issues"

[project.optional_dependencies]
dev = [
    "black",
    "check-manifest",
    "flake8",
    "flake8-builtins",
    "flake8-comprehensions",
    "flake8-mutable",
    "flake8-print",
    "interrogate",
    "isort",
    "nbsphinx",
    "pre-commit",
    "pydocstyle",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "pytest-sugar",
    "pytest-xdist",
    "setuptools_scm",
    "sphinx",
    "sphinx_rtd_theme",
    "twine",
    "wheel",
]