[metadata]
name = pyobis
description = Python client for OBIS
author = Scott Chamberlain
author_email = myrmecocystus@gmail.com
url = https://github.com/iobis/pyobis
long_description_content_type = text/rst
long_description = file: README.rst
license = MIT
license-file = LICENSE
project_urls =
    Documentation = https://pyobis.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/iobis/pyobis
    Source Code = https://github.com/iobis/pyobis
classifiers =
    Development Status :: 4 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
install_requires =
    requests>2.7
    pandas
python_requires = >=3.7
packages = find:
