# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pyobis
description = Python client for OBIS
author = pyOBIS Community
author_email = pyobis-mailing-list@googlegroups.com
url = https://github.com/iobis/pyobis
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
license-file = LICENSE
project_urls =
    Documentation = https://iobis.github.io/pyobis
    Bug Tracker = https://github.com/iobis/pyobis
    Source Code = https://github.com/iobis/pyobis
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
install_requires =
    requests>2.7
    pandas
python_requires = >=3.7
packages = find:
